@startuml musicProject

class Song{
    String id
    String artist
    String name
    String genre
    double length
    get()
    set()
    toString()
}
User "1.." *-- "0.." Playlist
class User{
    String id 
    String username
    Map<String, Playlist> library
    get()
    set()
    addPlaylist()
    removePlaylist()
}
Playlist "1" o-- "0..*" Song
class Playlist{
    String id
    String name
    Map<String, Song> songs
    get()
    set()
    addSong()
    removeSong()
}
@enduml